Fixed shifting content from centered layout.

--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -48,6 +48,7 @@ html {
 
 body {
   margin: 0;
+  padding: 0;
 }
 
 a:focus {
@@ -4927,7 +4928,7 @@ a.list-group-item.active > .badge,
   font-weight: 200;
   line-height: 2.1428571435;
   color: inherit;
-  background-color: #eeeeee;
+  background-color: #fff;
 }
 
 .jumbotron h1 {
